# uartd

./: .gitignore  Cargo.toml  README.md  flake.nix  plan.md  uartd.toml.example
crates/uart/: Cargo.toml
crates/uart-core/: Cargo.toml
crates/uart-core/src/: client.rs  config.rs  lib.rs  login.rs  pacer.rs  verified.rs
crates/uart-core/tests/: integration.rs  verified_run.rs
crates/uart-core/tests/common/: mod.rs
crates/uart/src/: main.rs
crates/uartd/: Cargo.toml
crates/uartd/src/: main.rs
crates/uartfs/: Cargo.toml  README.md
crates/uartfs-frontend/: Cargo.toml  README.md
crates/uartfs-frontend/deploy/: install.sh  uartfs-console@.service
crates/uartfs-frontend/src/: main.rs
crates/uartfs-frontend/tests/: frontend.rs
crates/uartfs/agent/: uartfs-agent.sh
crates/uartfs/src/: attach.rs  chunk.rs  client_link.rs  commands.rs  delta.rs  frame.rs  hash.rs  lib.rs  main.rs  msg.rs  transport.rs
crates/uartfs/tests/: agent.rs
crates/uartfs/tests/common/: mod.rs
src/: buffer.rs  clock.rs  config.rs  daemon.rs  expect.rs  lib.rs  lines.rs  proto.rs
tests/: integration.rs
tests/common/: mod.rs
