[package]
name = "uartd"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Buffered UART console daemon + CLI for AI-driven serial control"

[lib]
name = "uartd"
path = "src/lib.rs"

[[bin]]
name = "uartd"
path = "src/bin/uartd.rs"

[[bin]]
name = "uart"
path = "src/bin/uart.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# default-features=false drops the libudev dependency (port enumeration); we always open an
# explicit port path, so we don't need it. Keeps the build dependency-light like the siblings.
serialport = { version = "4.7", default-features = false }
libc = "0.2"
toml = "0.8"

[dev-dependencies]
nix = { version = "0.29", features = ["term", "fs", "process"] }

[profile.release]
strip = true
lto = true
