[workspace]
resolver = "2"
members = ["crates/uart-core", "crates/uartd", "crates/uart", "crates/uartfs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Shared dependency versions, referenced by member crates via `<dep>.workspace = true`.
[workspace.dependencies]
uart-core = { path = "crates/uart-core" }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.7", default-features = false }
libc = "0.2"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
