[package]
name = "uart-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the uart tools: buffered UART console transport + control protocol"

[lib]
name = "uart_core"
path = "src/lib.rs"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
libc.workspace = true
toml.workspace = true
base64.workspace = true
sha2.workspace = true

[dev-dependencies]
# integration tests open a pty via libc to stand in for the serial device
libc.workspace = true
