[package]
name = "uartfs-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "On-device pty-owning console front-end: framed, validated console over the serial line"

[[bin]]
name = "uartfs-frontend"
path = "src/main.rs"

[dependencies]
uartfs.workspace = true
base64.workspace = true
sha2.workspace = true
libc.workspace = true

[dev-dependencies]
uart-core.workspace = true
