[package]
name = "uartfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reliable delta-aware file/flash transport over a lossy UART console (rides uartd)"

[[bin]]
name = "uartfs"
path = "src/main.rs"

[lib]
name = "uartfs"
path = "src/lib.rs"

[dependencies]
uart-core.workspace = true
clap.workspace = true
base64.workspace = true
sha2.workspace = true
libc.workspace = true

[dev-dependencies]
libc.workspace = true
